service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
